Do not throttle non-http[s] requests

Bug: 847890
Change-Id: Idde0768ef78a23b7082e1b19cad35c683d5e6c20
Reviewed-on: https://chromium-review.googlesource.com/1080349
Commit-Queue: Yutaka Hirano <yhirano@chromium.org>
Reviewed-by: Marijn Kruisselbrink <mek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563525}
Former-commit-id: 1a7cd4c26cdca76a627db82a6f423446baced1d0